Fix for bug 63502 (Content-Style-Type doesn't handle parameters). r=glazman, sr=attinasi.